--- a/codes/ODA.html
+++ b/codes/ODA.html
@@ -5,6 +5,7 @@
     <body>
     	<h1 align = "center"><font face="Verdana" color="#fb6a4a">Official Developmental Aid</font></h1>
         
+        <div id="buttons"></div>
         <div id="container1"></div>
         <div id="wrapper">
             <p id="lineinfo"></p>
